welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: type mismatch;
 found   : Boolean
 required: Int
    if (nums(i)==nums(i+1)-5 && nums(i+2==nums(i)-1)){
                                        ^