welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
  var n:Int =nums.length
  for (i<- 0 to n-3){
    if (nums(i)==nums(i+1)-5 && nums(i+2==nums(i)-1)){
      return true
    }
  }
  return false
}